Milestone 2/css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Segoe UI", Arial, sans-serif;
}

img {
    width: 100%;
    margin: 0 auto;
}

a {
    color: inherit;
    text-decoration: none;
}

ul {
    padding-left: 0;
    list-style-type: none;
}

#app {
    height: 100vh;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    background: rgb(1,149,136);
    background: linear-gradient(180deg, rgba(1,149,136,1) 15%, #d9dbd4 0%);
}

.main-container {
    width: 80%;
    min-width: 800px;
    height: 90%;
    display: flex;
}


/********************         ASIDE           ************************/
aside {
    width: 40%;
    height: 100%;
    background-color: white;
}

.main-chat {
    width: 60%;
    height: 100%;
}

.head-chat {
    background-color: rgb(235 235 235);
    height: 70px;
    display: flex;
    justify-content: space-between;
    border: 1px solid rgb(224 224 224);
    padding-left: 15px;
    padding-right: 15px;
}

.user-container {
    height: 100%;
    display: flex;
}

.user-avatar {
    display: flex;
    align-self: center;
}

.user-avatar > img {
    height: 50px;
    border-radius: 50%;
}

.head-chat .user-name {
    align-self: center;
    margin: 0 10px;
    text-align: center;
    font-size: 20px;
}

.icons-container {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.icons-container i {
    margin: 0 10px;
    font-size: 20px;
    color: rgb(177 177 177);
}

/* notifications */

.notifications {
    padding: 20px;
    height: 80px;
    background-color: rgb(142 218 251);
}

.no-alert {
    width: 50px;
    height: 50px;
    line-height: 50px;
    vertical-align: middle;
    font-size: 20px;
    background-color: white;
    text-align: center;
    margin-right: 10px;
    border-radius: 50%;
    color: rgb(142 218 251);
    align-self: center;
}

.set-alert {
    font-size: 14px;
    text-decoration: underline;
}

/* search user */

.search-user-container {
    background-color: rgb(245 245 245);
    height: 40px;
    padding: 5px;
}

.search-user-bar {
    background-color: white;
    height: 30px;
    border-radius: 3px;
    font-size: 14px;
    color: rgb(177 177 177);
    line-height: 30px;
}

.search-user-bar i {
    margin: 0 20px;
}

.search-user-bar > input {
    width: 70%;
    border: 0;
}

/* contacts list */

.contacts-list {
    height: calc(100% - 190px);
    overflow-y: auto;
}

.contacts-list li {
    height: 80px;
    border-bottom: 1px solid lightgrey;
    padding: 10px;
    cursor: pointer;
}

.user-name {
    align-self: flex-start;
    padding: 10px;
    text-align: start;
}

.last-seen {
    font-size: 12px;
    color: grey;
}

.selected {
    background-color: rgb(233 235 234);
}

/********************         MAIN CHAT           ************************/

.chat {
    height: calc(100% - 140px);
    background-image: url(../img/mine.jpg);
    padding: 30px 80px;
    overflow-y: auto;
}

.foot-chat {
    height: 70px;
    background-color: rgb(235 235 235);
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: relative;
    z-index: 1;
}

.foot-chat > i {
    font-size: 22px;
    color: rgb(106 115 118);
    margin: 0 30px; 
    cursor: pointer;
}

.foot-chat input {
    flex-grow: 1;
    height: 45px;
    border: 0;
    border-radius: 10px;
    padding-left: 10px;
}

.messages {
    display: flex;
    flex-direction: column;
}

.message {
    min-height: 55px;
    max-width: 60%;
    min-width: 200px;
    border-radius: 15px;
    padding: 10px;
    margin-top: 10px;
    display: flex;
    align-items: center;
    line-height: 20px;
    position: relative;
    z-index: 0;
}

.received {
    background-color: white;
    align-self: flex-start;
}

.sent {
    background-color: rgb(213 249 186);
    align-self: flex-end;
}

.hours {
    position: absolute;
    font-size: 10px;
    bottom: 0;
    right: 0;
    padding: 0 5px;
    color: grey;
}

